[gd_scene load_steps=2 format=3 uid="uid://fgrqaypsqq2v"]

[ext_resource type="Script" uid="uid://pcnxov08box" path="res://scripts/panel_debug.gd" id="2_1yuim"]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelDebug" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 23.0
grow_horizontal = 0
script = ExtResource("2_1yuim")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelDebug"]
layout_mode = 2

[node name="DebugLabel" type="Label" parent="CanvasLayer/PanelDebug/VBoxContainer"]
layout_mode = 2
text = "Debug Panel"

[node name="Graph_FPS" type="TextureRect" parent="CanvasLayer/PanelDebug/VBoxContainer"]
layout_mode = 2

[node name="Graph_Frame" type="TextureRect" parent="CanvasLayer/PanelDebug/VBoxContainer"]
layout_mode = 2
